--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "http://localhost:1313/"
+baseURL: "http://Kiyuu-o.github.io"
 languageCode: "en-us"
 title: "Kexuan Miao (缪可轩)"
 theme: ["PaperMod"]
