--- a/config.yml
+++ b/config.yml
@@ -21,6 +21,7 @@ params:
     Content: |
       Welcome to my competitive programming blog! Here you'll find tutorials, solutions, and insights on problem-solving techniques.
       Feel free to explore the site and check out my archive for more articles!
+  social: true
   socialIcons: # Optional, if you want to add social icons
     - name: "Github"
       url: "https://github.com/kiyuu-o"
